namespace java com.moseeker.thrift.gen.dao.struct.wordpressdb
namespace py thrift_gen.gen.dao.struct.wordpressdb


struct WordpressUsersDO {

	1: optional i32 id,	//null
	2: optional string userLogin,	//null
	3: optional string userPass,	//null
	4: optional string userNicename,	//null
	5: optional string userEmail,	//null
	6: optional string userUrl,	//null
	7: optional string userRegistered,	//null
	8: optional string userActivationKey,	//null
	9: optional i32 userStatus,	//null
	10: optional string displayName	//null

}
